<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/UserListFragment">

    <fragment
        android:id="@+id/UserListFragment"
        android:name="com.random.user.presentation.list.view.UserListFragment"
        tools:layout="@layout/user_list_fragment">

        <action
            android:id="@+id/action_UserListFragment_to_UserDetailsFragment"
            app:destination="@+id/UserDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/UserDetailsFragment"
        android:name="com.random.user.presentation.userDetails.view.UserDetailsFragment"
        tools:layout="@layout/user_details_fragment">
        <argument
            android:name="gender"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="address"
            app:argType="string" />
        <argument
            android:name="registered_date"
            app:argType="string" />
        <argument
            android:name="email"
            app:argType="string" />
        <argument
            android:name="picture"
            app:argType="string" />
    </fragment>
</navigation>