<resources>
    <string name="app_name">RandomUser</string>
    <string name="image_description">Profile image</string>
    <string name="delete_description">Delete user</string>
    <string name="user_deleted">User deleted</string>
    <string name="address">Address</string>
    <string name="registered_date">Registered Date</string>
    <string name="filter">Filter</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Gender Male</string>
    <string name="gender_female">Gender Female</string>
    <string name="user_fetch_error">Unable to get user information</string>
</resources>