...
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@id/name"
        android:fontFamily="@font/montserrat"
        tools:text="12345678" />

    <ImageButton
        android:id="@+id/delete_user"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
...
